--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ html {
   box-sizing: inherit;
   font-family: inherit;
   font-weight: inherit;
-  font-size: inherit;
+  font-style: inherit;
   font-size: inherit;
   margin: 0;
   padding: 0;
@@ -28,5 +28,7 @@ body {
   /* font-family: "Fraunces", serif; */
   font-family: "Montserrat", sans-serif;
   font-weight: 500;
+  font-style: normal;
   font-size: 1.4rem;
+  min-height: 100%;
 }
