--- a/css/style.css
+++ b/css/style.css
@@ -1,34 +1,70 @@
 /* ---- Normalize CSS ---- */
 html {
   box-sizing: border-box;
+  block-size: 100%;
   font-size: 62.5%;
-  height: 100%;
 }
 
 *,
 *::before,
 *::after {
   box-sizing: inherit;
+  margin: 0;
+  padding: 0;
+  border: 0;
   font-family: inherit;
   font-weight: inherit;
   font-style: inherit;
   font-size: inherit;
-  margin: 0;
-  padding: 0;
-  border: 0;
 }
 
 html,
-body {
-  width: 100%;
-}
+body { inline-size: 100%; }
 
 /* ---- Main Code ---- */
 body {
-  /* font-family: "Fraunces", serif; */
-  font-family: "Montserrat", sans-serif;
-  font-weight: 500;
-  font-style: normal;
-  font-size: 1.4rem;
-  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-block-size: 100%;
+  font: normal 500 1.4rem "Montserrat", sans-serif;
 }
+
+.page {
+}
+.page__title {
+}
+.card {
+}
+.card__image {
+}
+.card__container {
+}
+.card__label {
+}
+.card__title {
+}
+.card__text {
+}
+.card__price {
+}
+.card__value-now {
+}
+.card__value-before {
+}
+.card__btn {
+}
+
+.page__title,
+.card__title,
+.card__value-now { font-family: "Fraunces", serif; }
+
+.attribution {
+  font-size: 1.1rem;
+  text-align: center;
+}
+.attribution__link:link,
+.attribution__link:visited { color: #000; }
+.attribution__link:hover,
+.attribution__link:active { color: #666; }
