--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,8 @@ html {
 
 *,
 *::before,
-*::after {
+*::after,
+button {
   box-sizing: inherit;
   margin: 0;
   padding: 0;
@@ -27,7 +28,9 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  max-inline-size: 1440px;
   min-block-size: 100%;
+  margin-inline: auto;
   padding-block: 2em;
   padding-inline: 1em;
   font: normal 500 1.4rem "Montserrat", sans-serif;
@@ -35,9 +38,7 @@ body {
   background-color: #f2ebe3;
 }
 
-.page {
-}
-.page__title {
+.title {
   margin-block-end: 1em;
   font-size: 1.8rem;
   text-align: center;
@@ -64,15 +65,40 @@ body {
   color: #000;
 }
 .card__text {
+  margin-block-end: 1.4em;
+  line-height: 1.6;
 }
 .card__price {
+  display: flex;
+  align-items: center;
+  margin-block-end: 1.2em;
 }
 .card__value-now {
+  margin-inline-end: .6em;
+  font-size: 3.2rem;
+  color: #3c8067;
 }
-.card__value-before {
-}
+.card__value-before { text-decoration: line-through; }
 .card__btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  inline-size: 100%;
+  block-size: 3.5em;
+  font-weight: 700;
+  color: #fff;
+  background-color: #3c8067;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: all .1s ease 0s;
 }
+.card__btn:hover { background-color: #52ad8c; }
+.card__btn:focus {
+  outline: 0;
+  box-shadow: 0 0 4px 6px #52ad8c;
+
+}
+.card__icon-cart { margin-inline-end: .8em; }
 
 .page__title,
 .card__title,
@@ -86,3 +112,28 @@ body {
 .attribution__link:visited { color: #000; }
 .attribution__link:hover,
 .attribution__link:active { color: #666; }
+.attribution__link:focus {
+  padding: .1em;
+  outline: 0;
+  border: 2px solid #666;
+  border-radius: 4px;
+}
+
+/* ---- Media Queries ---- */
+@media (min-width: 90em) {
+  .title { font-size: 2.5rem; }
+  .card {
+    display: flex;
+    max-inline-size: 600px;
+    margin-block-end: 1.6em;
+  }
+  .card__image { block-size: 100%; }
+  .card__container { padding: 2.7em; }
+  .card__image,
+  .card__container { flex: 0 0 50%; }
+  .card__label { margin-block-end: 1.3em; }
+  .card__title { margin-block-end: .7em; }
+  .card__price { margin-block-end: 1.6em; }
+
+  .attribution { font-size: 1.2rem; }
+}
